@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{ruote-couch}
-  s.version = "2.1.5"
+  s.version = "2.1.7"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-01-28}
+  s.date = %q{2010-02-12}
   s.description = %q{CouchDB storage for ruote 2.1 (ruby workflow engine)}
   s.email = %q{jmettraux@gmail.com}
   s.extra_rdoc_files = [
@@ -28,14 +28,7 @@ Gem::Specification.new do |s|
      "lib/ruote/couch/storage.rb",
      "lib/ruote/couch/version.rb",
      "ruote-couch.gemspec",
-     "test/functional/ft_0_echo.rb",
-     "test/functional/test.rb",
-     "test/integration_connection.rb",
-     "test/path_helper.rb",
-     "test/test.rb",
-     "test/test_helper.rb",
-     "test/unit/test.rb",
-     "test/unit/ut_0_initial.rb"
+     "test/integration_connection.rb"
   ]
   s.homepage = %q{http://github.com/jmettraux/ruote-couch}
   s.rdoc_options = ["--charset=UTF-8"]
@@ -52,18 +45,21 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<ruote>, [">= 2.1.5"])
-      s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.12"])
+      s.add_runtime_dependency(%q<ruote>, [">= 2.1.7"])
+      s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.13"])
       s.add_development_dependency(%q<yard>, [">= 0"])
+      s.add_development_dependency(%q<jeweler>, [">= 0"])
     else
-      s.add_dependency(%q<ruote>, [">= 2.1.5"])
-      s.add_dependency(%q<rufus-jig>, [">= 0.1.12"])
+      s.add_dependency(%q<ruote>, [">= 2.1.7"])
+      s.add_dependency(%q<rufus-jig>, [">= 0.1.13"])
       s.add_dependency(%q<yard>, [">= 0"])
+      s.add_dependency(%q<jeweler>, [">= 0"])
     end
   else
-    s.add_dependency(%q<ruote>, [">= 2.1.5"])
-    s.add_dependency(%q<rufus-jig>, [">= 0.1.12"])
+    s.add_dependency(%q<ruote>, [">= 2.1.7"])
+    s.add_dependency(%q<rufus-jig>, [">= 0.1.13"])
     s.add_dependency(%q<yard>, [">= 0"])
+    s.add_dependency(%q<jeweler>, [">= 0"])
   end
 end
 
